--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/extension-accelerate": "^3.0.0",
     "bcryptjs": "^3.0.3",
     "jose": "^6.1.2",
+    "jsonwebtoken": "^9.0.3",
     "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
